--- a/src/components/NavBar/Navbar.module.scss
+++ b/src/components/NavBar/Navbar.module.scss
@@ -3,23 +3,22 @@
   -webkit-box-align: center;
   align-items: center;
   position: relative;
-}
 
-.nav > a {
-  width: 7rem;
-  display: flex;
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  justify-content: center;
-  font-size: 1.125rem;
-  text-decoration: none;
-  color: var(--text3);
-  height: 3rem;
+  > a {
+    width: 7rem;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    font-size: 1.125rem;
+    text-decoration: none;
+    color: var(--text3);
+    height: 3rem;
 
-  &:hover {
-    border-bottom: #282c34 solid 2px;
-
+    &:hover {
+      border-bottom: #282c34 solid 2px;
+    }
   }
 }
 
@@ -32,7 +31,6 @@
   align-items: center;
   position: relative;
   padding: 0 20px;
-
 }
 
 .select {
@@ -74,7 +72,6 @@
   list-style-type: none;
   padding-left: 0px;
   margin: 0px;
-
 }
 
 .selectOption li {
@@ -83,14 +80,17 @@
   font-size: 0.875rem;
   padding: 0.75rem 1rem;
 
-}
+  & + li {
+    border-top: 1px solid gainsboro;
+  }
 
-.selectOption li + li {
-  border-top: 1px solid gainsboro;
-}
+  &.isSelected {
+    color: #fe0000;
+  }
 
-.active {
-  color: mediumturquoise;
+  &:hover {
+    background-color: #fe7777;
+  }
 }
 
 .optionWrapper {
