--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -23,4 +23,8 @@
   font-size: 1.8rem;
   text-decoration: none;
   font-family: 'Fira Mono', monospace;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  color: inherit;
 }
