--- a/src/components/NavBar/Navbar.module.scss
+++ b/src/components/NavBar/Navbar.module.scss
@@ -13,13 +13,27 @@
     justify-content: center;
     font-size: 1.125rem;
     text-decoration: none;
-    color: var(--text3);
+    color: darkgray;
     height: 3rem;
 
-    &:hover {
-      border-bottom: #282c34 solid 2px;
+    img {
+      font-size: 1.5rem;
+      margin-right: 0.5rem;
     }
+
   }
+
+}
+
+.navWrapper {
+  width: 100%;
+  margin-top: 1.5rem;
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  align-items: center;
+  position: relative;
 }
 
 .wrapper {
@@ -50,6 +64,19 @@
   font-size: 0.875rem;
   box-shadow: rgb(0 0 0 / 5%) 0px 0px 4px;
   cursor: pointer;
+
+  > img {
+    width: 12px;
+    height: 12px;
+  }
+
+}
+
+.selectOptionWrapper {
+  position: absolute;
+  right: 0px;
+  top: 100%;
+  z-index: 5;
 }
 
 .option {
@@ -66,36 +93,37 @@
   background: white;
   color: black;
   transform-origin: right top;
-}
 
-.selectOption ul {
-  list-style-type: none;
-  padding-left: 0px;
-  margin: 0px;
-}
-
-.selectOption li {
-  cursor: pointer;
-  font-weight: 600;
-  font-size: 0.875rem;
-  padding: 0.75rem 1rem;
-
-  & + li {
-    border-top: 1px solid gainsboro;
+  ul {
+    list-style-type: none;
+    padding-left: 0px;
+    margin: 0px;
   }
 
-  &.isSelected {
-    color: #fe0000;
+  .selectOption_li {
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 0.875rem;
+    padding: 0.75rem 1rem;
+
+    & + li {
+      border-top: 1px solid gainsboro;
+    }
+
+    &.isSelected {
+      color: deeppink;
+    }
+
+    &:hover {
+      background-color: gainsboro;
+    }
   }
 
-  &:hover {
-    background-color: #fe7777;
-  }
+
 }
 
-.optionWrapper {
-  position: absolute;
-  right: 0px;
-  top: 100%;
-  z-index: 5;
+.nav_selected {
+  color: black !important;
+  border-bottom: #282c34 solid 2px;
 }
+
