--- a/src/pages/HomePage/HomePages.module.scss
+++ b/src/pages/HomePage/HomePages.module.scss
@@ -1,4 +1,8 @@
+@import "../../styles/resetCSS";
+
 .wrapper {
+  width: 100%;
+  height: 100%;
   background-color: whitesmoke;
   margin: auto;
   padding: 0;
@@ -11,9 +15,11 @@
 
 .body {
   padding: 0 200px;
+  margin: 0;
 }
 
 .postWrapper {
-  padding: 20px;
-  margin: 0 auto;
+  display: flex;
+  margin-top: 2rem;
+  flex-wrap: wrap;
 }
