feat : 2주차 dropdown 설정

--- a/src/components/NavBar/Navbar.module.scss
+++ b/src/components/NavBar/Navbar.module.scss
@@ -23,6 +23,17 @@
 
   }
 
+  .dropdown {
+    background-color: darkslategrey;
+    color: white;
+    font-weight: 600;
+    font-size: 0.875rem;
+    height: 2rem;
+    width: 6rem;
+    border-radius: 10px;
+    margin-left: 20px;
+  }
+
 }
 
 .navWrapper {
