--- a/src/components/Modal/PresentModal/PresentModal.module.scss
+++ b/src/components/Modal/PresentModal/PresentModal.module.scss
@@ -13,9 +13,9 @@
     color: #4a5763
   }
 
-  body {
+  .main {
     height: 380px;
-    margin: 20px;
+    margin: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -56,6 +56,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 20px;
 
     button {
       width: 100px;
