--- a/src/components/Modal/modal.module.scss
+++ b/src/components/Modal/modal.module.scss
@@ -9,3 +9,21 @@
   align-items: center;
   justify-content: center;
 }
+
+.modalWrapper {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.enterActive {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
