--- a/src/pages/HomePage/HomePages.module.scss
+++ b/src/pages/HomePage/HomePages.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles/resetCSS";
+@import '../../styles/resetCSS';
 
 .wrapper {
   width: 100%;
@@ -6,16 +6,31 @@
   background-color: whitesmoke;
   margin: auto;
   padding: 0;
-}
 
-.header {
-  padding: 20px 200px;
-  height: 10%;
+  .header {
+    height: 20%;
+    background-color: whitesmoke;
+    padding: 20px 200px;
+  }
+
+  .eventHeader {
+    position: relative;
+    top: var(--top);
+    width: 100%;
+    height: 20%;
+    background-color: white;
+    padding: 20px 200px 30px 200px;
+    z-index: 10;
+  }
+
+  .isHidden {
+    display: none !important;
+  }
 }
 
 .body {
-  padding: 0 200px;
-  margin: 0;
+  padding: 20px 200px;
+  margin: 20px 0;
 }
 
 .postWrapper {
